@@ -4,6 +4,7 @@ Jump Start Changelog
 2.0.0-RC2 - XX/XX/2015
 ----------------------
 
+* Added "Text Blocks" sortable option type.
 * Fixed: Only load Nivo script if Theme Blvd Sliders plugin is installed.
 * Fixed: Animation of hiding mobile menu with RTL languages.
 
